src/Components/Header/SideBarMenu/styles.module.css
.accordion-header[aria-expanded="true"] {
  background-color: #e8ecf5;
  transition: all 0.3s;
  color: #1a4499;
  stroke: #1a4499;
  border-color: transparent;
  border-bottom-left-radius: 1rem;
  border-bottom-right-radius: 1rem;
}
.AccordionBodyHasMenu[aria-expanded="true"] {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
.navCards:last-child {
  margin-bottom: 1rem;
}

